@@ -83,9 +83,6 @@ following options:
 
 - Exclude the ``_id`` field from the found document with a projection.
 - Specify an upsert, which inserts the document specified by the query filter if no documents match the query.
-- Set a maximum execution time of 5 seconds for this operation on the MongoDB
-  instance. If the operation takes longer, the ``findOneAndUpdate()`` method
-  will throw a ``MongoExecutionTimeoutException``.  
 
 .. literalinclude:: /includes/fundamentals/code-snippets/CompoundOperatorsIndividualExamples.java
    :language: java
