@@ -4,8 +4,6 @@
 Access Data From a Cursor
 =========================
 
-
-
 .. contents:: On this page
    :local:
    :backlinks: none
@@ -15,8 +13,8 @@ Access Data From a Cursor
 Overview
 --------
 
-In this guide, you can learn how to access data using a **cursor** with the
-MongoDB Java driver.
+In this guide, you can learn how to access data by using a **cursor** in
+the {+driver-short+}.
 
 A cursor is a mechanism that allows an application to iterate over database
 results while only holding a subset of them in memory at a given time. The
@@ -37,6 +35,12 @@ The ``find()`` method creates and returns an instance of a
 ``FindIterable``. A ``FindIterable`` allows you to browse the documents
 matched by your search criteria and to further specify which documents
 to see by setting parameters through methods.
+
+.. tip:: Cursor Timeout
+
+   You can set a timeout on your cursor to return query results.
+   To learn more, see the :ref:`java-csot-cursor` section of the Limit
+   Server Execution Time guide.
 
 Terminal Methods
 ----------------
