@@ -125,6 +125,12 @@ A ``ClientSession`` also has methods to retrieve session properties and modify m
 session properties. View the :ref:`API
 documentation <api-docs-transaction>` to learn more about these methods.
 
+.. tip:: Transaction Timeout
+
+   You can set a limit on amount of time that operations can take
+   to complete in your transactions. To learn more, see the
+   :ref:`java-csot-transaction` section of the Limit Server Execution Time guide.
+
 Example
 -------
 
