@@ -124,6 +124,10 @@ and features:
 
 .. sharedinclude:: dbx/jvm/v5.2-wn-items.rst
 
+   .. replacement:: csot-link
+
+      the :ref:`java-csot` guide
+
    .. replacement:: avs-index-link
 
       :ref:`java-search-indexes` in the Indexes guide
